--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <title>Pedward's Personal Site
-  </title>
+    <title>Pedward's Personal Site</title>
+
+  <style>
+
+  body{
+    background-color: #E8F9FD;
+  }
+
+  hr {
+    border-style: dotted none none;
+    width: 5%;
+    border-color: grey;
+    border-width: 5px;
+  }
+
+  </style>
 </head>
 <hr>
 
