--- a/index.html
+++ b/index.html
@@ -1,30 +1,17 @@
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-    <title>Pedward's Personal Site</title>
-
-  <style>
-
-  body{
-    background-color: #E8F9FD;
-  }
-
-  hr {
-    border-style: dotted none none;
-    width: 5%;
-    border-color: grey;
-    border-width: 5px;
-  }
-
-  </style>
+    <title>🤠Pedward🤠</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <hr>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/train.jpg" alt="train" style="width:684px;height:450px;"></td>
+      <td><img src="images/pink.jpg" alt="pink" style="width:684px;height:450px;"></td>
       <td>
         <h1>@P3dward</h1>
         <em>
@@ -34,7 +21,6 @@
         <p>
           I am the founder and CEO of Multimedia Media Company LLC, a venture that initially started out as a legal tax scam but quickly grew into so much more.
         </p>
-        <hr>
       </td>
     </tr>
   </table>
