--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Contact Information</title>
+  <title>🤠Contact Information🤠</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+  <h1>My Contact Details</h1>
   <p>Phone- 217-369-6969</p>
   <p>Email- MultiMediaMarketingCompanyLLC@gmail.com</p>
   <p>Address- 369 Boulevard Drive</p>
-  <hr>
 
-  <form action="mailto:patrickedwarddorsey@gmail.com" method="post"enctype="text/plain">
+  <form action="mailto:patrickedwarddorsey@gmail.com" method="post" enctype="text/plain">
     <label>Your Name:</label>
     <input type="text" name="yourName" value=""><br>
     <label>Your Email:</label>
